--- a/shop/index.html
+++ b/shop/index.html
@@ -42,7 +42,7 @@
               <a href="/shop/longsleeve.html" ><img class="lookbook-preview" src="../img/longsleeve-preview.png"/></a>
             </div>
             <div class="col-md-4">
-              <a href="/shop/swearshirt.html" ><img class="lookbook-preview" id="hoodie" src="../img/hoodie-preview.png"/></a>
+              <a href="/shop/hoodie.html" ><img class="lookbook-preview" id="hoodie" src="../img/hoodie-preview.png"/></a>
             </div>
           </div>
         </div>
