--- a/shop/index.html
+++ b/shop/index.html
@@ -32,16 +32,16 @@
     <a href="/"><img src="../img/cat-heaven-blue2.png" style="display: block; margin:0 auto;"/></a>
   </div>
     <div class="container h-100" style="margin-left: 0px;margin-right: 0px;max-width: 100%;">
-      <div class="row h-100 justify-content-center" id="fullpage" style="margin-top:-156.39px;">
+      <div class="row h-100 justify-content-center" id="fullpage">
         <div class="col-12 align-self-center" id="shop-main">
           <div class="row justify-content-center">
-            <div class="col-md-4">
+            <div class="col-4">
               <a href="/shop/shirt.html" ><img class="lookbook-preview" id="hoodie" src="../img/shirt-preview.png"/></a>
             </div>
-            <div class="col-md-4">
+            <div class="col-4">
               <a href="/shop/longsleeve.html" ><img class="lookbook-preview" src="../img/longsleeve-preview.png"/></a>
             </div>
-            <div class="col-md-4">
+            <div class="col-4">
               <a href="/shop/hoodie.html" ><img class="lookbook-preview" src="../img/hoodie-preview.png"/></a>
             </div>
           </div>
