--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@
           </div>
         </div>
       </div>
-  </div>
+    </div>
+  <div id="hom-page"></div>  
   <div id="shop-page"></div>
 
   <!--Javascript-->
