--- a/index.html
+++ b/index.html
@@ -26,9 +26,8 @@
 </head>
 <body>   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec-->
   <audio preload="auto" src="song-for-site.m4a" loop="true" autobuffer></audio>
-  
-  <div id="home-page"></div>  
-  <div id="shop-page"></div>
+
+  <div id="main-page"></div>  
 
   <!--Javascript-->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
