--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
   </script>
 </head>
 <body>   <!--url(img/roy-bg.png);background-size: cover;" #e7e7ec-->
-  <audio preload="auto" src="song-for-site.m4a" loop="true" autobuffer></audio>
+  <audio id="tune" src="song-for-site.m4a" loop="loop"></audio>
 
   <div id="main-page"></div>  
 
