--- a/credits/index.html
+++ b/credits/index.html
@@ -331,6 +331,12 @@
 
 </div>
 
+<div style="position: absolute;bottom: 0;right: 0;z-index:108;">
+        <a href="http://open.spotify.com/album/0Z9NeEvqeecaLCFUmI4uDw"><img class="icon-link" src="../img/spotify-white.png"></a>
+        <a href="https://itunes.apple.com/us/album/cat-heaven/1316794586?uo=4&amp;at=1001l3Iq&amp;ct=888915493540"><img class="icon-link" src="../img/apple-white.png"></a>
+        <a href="https://play.google.com/store/music/album/Roy_Blair_Cat_Heaven?id=B4clujticxginkvlyk5eosnuuly"><img class="icon-link last-link" src="../img/google-white.png"></a>
+</div>
+
 <div class="fullscreen-bg">
   <video muted autoplay playsinline poster="../img/placeholder.png" id="vid1" class="fullscreen-bg__video">
     <source src="../img/websiteloop.webm" type=”video/webm”>
