--- a/shop/index.html
+++ b/shop/index.html
@@ -27,11 +27,10 @@
     gtag('config', 'UA-108381604-1');
   </script>
 </head>
-<body>    <!--#f1edec pretty grey-->
-  <audio preload="auto" src="../song-for-site.m4a" loop="true" autobuffer></audio>
+<body>
 
     <div class="menu-i" style="position: relative;" id="menu-item-roy">
-        <a href="/"><img src="../img/cat-heaven-blue2.png" style="display: block; margin:0 auto;"/></a>
+        <a href="/"><img src="../img/cat-heaven-shirt.png" style="display: block; margin:0 auto;"/></a>
     </div>
     <div class="container h-100" style="margin-left: 0px;margin-right: 0px;max-width: 100%;">
       <div class="row h-100 justify-content-center" id="fullpage">
