--- a/shop/shirt.html
+++ b/shop/shirt.html
@@ -29,7 +29,7 @@
 </head>
 <body>    <!--#f1edec pretty grey-->
   <div class="menu-i" style="position: relative;" id="menu-item-roy">
-    <a href="/"><img src="../img/cat-heaven-blue2.png" style="display: block; margin:0 auto;"/></a>
+    <a href="/"><img src="../img/cat-heaven-shirt.png" style="display: block; margin:0 auto;"/></a>
   </div>
 
     <div class="container h-100" style="margin-left: 0px;margin-right: 0px;max-width: 100%;">
