changed product names

--- a/shop/hoodie.html
+++ b/shop/hoodie.html
@@ -38,8 +38,8 @@
           <img class="selected-shop-item" src="../img/top/hoodie/hoodie.jpg" style="float:left;"/>
         </div>
         <div class="col-5">
-          <p class="product-name">HOODIE</p>
-          <p class="price">20 USD</p>
+          <p class="product-name">"ON VIDEO" HOODIE</p>
+          <p class="price">50 USD</p>
           
           <div id='product-component-8efd6b2cba8'></div>
             <script type="text/javascript">
