--- a/shop/shirt.html
+++ b/shop/shirt.html
@@ -38,8 +38,8 @@
         <img class="selected-shop-item" src="../img/top/shirt/enya233-006.jpg" style="float:left;"/>
       </div>
       <div class="col-5">
-        <p class="product-name">SHIRT</p>
-        <p class="price">20 USD</p>
+        <p class="product-name">"BOGO" TEE</p>
+        <p class="price">25 USD</p>
 <div id='product-component-111367d5760'></div>
           <script type="text/javascript">
           /*<![CDATA[*/
