--- a/shop/longsleeve.html
+++ b/shop/longsleeve.html
@@ -38,8 +38,8 @@
         <img class="selected-shop-item" src="../img/top/longsleeve/enya233-024.jpg" style="float:left;"/>
       </div>
       <div class="col-5">
-        <p class="product-name">LONGSLEEVE</p>
-        <p class="price">20 USD</p>
+        <p class="product-name">"MURAL" LONGSLEEVE</p>
+        <p class="price">35 USD</p>
 
         <div id='product-component-d48e8d95e94'></div>
           <script type="text/javascript">
