--- a/shop/hoodie.html
+++ b/shop/hoodie.html
@@ -189,7 +189,7 @@
             </script>
 
             <p class="product-description">
-              blah blah blah soemthing about product description will go here
+              50% COTTON / 50% POLYESTER BLEND <br/> MADE IN HONDURAS
             </p>
         </div>
       </div>
