--- a/shop/longsleeve.html
+++ b/shop/longsleeve.html
@@ -189,7 +189,7 @@
           </script>
 
           <p class="product-description">
-            blah blah blah soemthing about product description will go here
+            100% COTTON <br/> MADE IN EL SALVADOR
           </p>
       </div>
     </div>
