--- a/shop/shirt.html
+++ b/shop/shirt.html
@@ -35,7 +35,8 @@
  <div class="container" style="padding-bottom:30px">
     <div class="row" id="shop-item-p" style="padding-left: 30px;padding-right: 30px;padding-top:20px;">
       <div class="col-7">
-        <img class="selected-shop-item" src="../img/top/shirt/enya233-006.jpg" style="float:left;"/>
+        <img class="selected-shop-item" src="../img/top/shirt/enya233-006.jpg" style="float:left;padding-bottom:30px"/>
+        <img class="selected-shop-item" src="../img/top/shirt/enya026-048.jpg" style="float:left;"/>
       </div>
       <div class="col-5">
         <p class="product-name">"BOGO" TEE</p>
@@ -188,7 +189,7 @@
           </script>
 
           <p class="product-description">
-            blah blah blah soemthing about product description will go here
+            100% COTTON<br/>MADE IN MEXICO
           </p>
       </div>
     </div>
