--- a/shop/bundle.html
+++ b/shop/bundle.html
@@ -42,7 +42,7 @@
       <div class="col-5">
         <p class="product-name">BUNDLE PACKAGE</p>
         <p class="price">100 USD</p>
-        <div id='product-component-19d82aafa73'></div>
+        <div id='product-component-35d74cb5746'></div>
           <script type="text/javascript">
           /*<![CDATA[*/
             (function () {
@@ -67,15 +67,15 @@
 
             function ShopifyBuyInit() {
                 var client = ShopifyBuy.buildClient({
-                  domain: 'matt-vitello.myshopify.com',
-                  apiKey: '90d3e54af3ed3ffbd6b8ad37e0f17ca7',
+                  domain: 'roy-blair.myshopify.com',
+                  apiKey: 'c4436ef009919a87987bc103df1e3fa1',
                   appId: '6',
                 });
 
                 ShopifyBuy.UI.onReady(client).then(function (ui) {
                   ui.createComponent('product', {
-                    id: [513917386807],
-                    node: document.getElementById('product-component-19d82aafa73'),
+                    id: [663099342876],
+                    node: document.getElementById('product-component-35d74cb5746'),
                     moneyFormat: '%24%7B%7Bamount%7D%7D',
                     options: {
       "product":{"variantId":"all","width":"240px",
