--- a/shop/index.html
+++ b/shop/index.html
@@ -29,7 +29,7 @@
 </head>
 <body>
     <div class="dont-show-me">
-    <div id='product-component-d48e8d95e94'></div>
+      <div id='product-component-35d74cb5746'></div>
           <script type="text/javascript">
           /*<![CDATA[*/
             (function () {
@@ -54,15 +54,15 @@
 
             function ShopifyBuyInit() {
                 var client = ShopifyBuy.buildClient({
-                  domain: 'matt-vitello.myshopify.com',
-                  apiKey: '90d3e54af3ed3ffbd6b8ad37e0f17ca7',
+                  domain: 'roy-blair.myshopify.com',
+                  apiKey: 'c4436ef009919a87987bc103df1e3fa1',
                   appId: '6',
                 });
 
                 ShopifyBuy.UI.onReady(client).then(function (ui) {
                   ui.createComponent('product', {
-                    id: [510358093879],
-                    node: document.getElementById('product-component-d48e8d95e94'),
+                    id: [663099342876],
+                    node: document.getElementById('product-component-35d74cb5746'),
                     moneyFormat: '%24%7B%7Bamount%7D%7D',
                     options: {
       "product":{"variantId":"all","width":"240px",
@@ -175,7 +175,7 @@
           })();
           /*]]>*/
           </script>
-        </div>
+    </div>
     <div class="menu-i" style="position: relative;" id="menu-item-roy">
         <a href="/"><img src="../img/cat-heaven-shirt.png" style="display: block; margin:0 auto;"/></a>
     </div>
