--- a/shop/shirt.html
+++ b/shop/shirt.html
@@ -41,7 +41,8 @@
       <div class="col-5">
         <p class="product-name">"BOGO" TEE</p>
         <p class="price">25 USD</p>
-<div id='product-component-111367d5760'></div>
+        
+        <div id='product-component-a89fcfb0e82'></div>
           <script type="text/javascript">
           /*<![CDATA[*/
             (function () {
@@ -66,15 +67,15 @@
 
             function ShopifyBuyInit() {
                 var client = ShopifyBuy.buildClient({
-                  domain: 'matt-vitello.myshopify.com',
-                  apiKey: '90d3e54af3ed3ffbd6b8ad37e0f17ca7',
+                  domain: 'roy-blair.myshopify.com',
+                  apiKey: 'c4436ef009919a87987bc103df1e3fa1',
                   appId: '6',
                 });
 
                 ShopifyBuy.UI.onReady(client).then(function (ui) {
                   ui.createComponent('product', {
-                    id: [510354227255],
-                    node: document.getElementById('product-component-111367d5760'),
+                    id: [663087579164],
+                    node: document.getElementById('product-component-a89fcfb0e82'),
                     moneyFormat: '%24%7B%7Bamount%7D%7D',
                     options: {
       "product":{"variantId":"all","width":"240px",
