--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DREW PHILIPS</title>
+  <title>DREW PHILLIPS</title>
   <meta name="description" content="Everblu Inc">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
@@ -10,21 +10,32 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 <body>
+<!--
 <div class="videoContainer">
+    <img id="bg-img" src="img/tv-room.jpg"/>
     <iframe class="videoContainer__video" width="1920" height="1080" src="https://www.youtube.com/embed/xRprw9kvPns?modestbranding=1&autoplay=1&controls=0&fs=0&loop=1&rel=0&showinfo=0&disablekb=1&playlist=IsBInsOj8TY" frameborder="0"></iframe>
-</div>
-<div id="overlay"></div>
-
-
+</div>-->
+<!--<div class="bg">-->
+<!--
   <div class="container h-100">
     <div class="row h-100 justify-content-center">
-      <div class="col-12 align-self-center"> <!--style="margin-top:-8.5%;"-->
+      <div class="col-6 align-self-center">
         <div class="row justify-content-center">
-          <p>DREW PHILIPS</p>
+          
+        </div>
+      </div>
+      <div class="col-6 align-self-center">
+        <div class="row justify-content-center">
+          <iframe width="560" height="315" src="https://www.youtube.com/embed/lfDinSTMHCI?modestbranding=1&autoplay=1&controls=0&fs=0&loop=1&rel=0&showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
+          <img src="img/OLDTV.png" style="width:70%;height:70%;z-index: 100;"/>
         </div>
       </div>
     </div>
   </div>
+-->
+
+<video autoplay muted loop id="myVideo" src="img/vid.mov"></video>
+
   <!--Javascript-->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.3/umd/popper.min.js" integrity="sha384-vFJXuSJphROIrBnz7yo7oB41mKfc8JzQZiCq4NCceLEaO4IHwicKwpJf9c9IpFgh" crossorigin="anonymous"></script>
