--- a/index.html
+++ b/index.html
@@ -6,35 +6,38 @@
   <meta name="description" content="Everblu Inc">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/style.css">
-  <link rel="icon" href="img/catheaven.ico" type="image/x-icon">
+  <link rel="icon" href="" type="image/x-icon">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 <body>
-<!--
-<div class="videoContainer">
-    <img id="bg-img" src="img/tv-room.jpg"/>
-    <iframe class="videoContainer__video" width="1920" height="1080" src="https://www.youtube.com/embed/xRprw9kvPns?modestbranding=1&autoplay=1&controls=0&fs=0&loop=1&rel=0&showinfo=0&disablekb=1&playlist=IsBInsOj8TY" frameborder="0"></iframe>
-</div>-->
-<!--<div class="bg">-->
-<!--
-  <div class="container h-100">
-    <div class="row h-100 justify-content-center">
-      <div class="col-6 align-self-center">
-        <div class="row justify-content-center">
-          
-        </div>
+  <video autoplay muted loop id="mainVideo" src="img/vid.mov"></video>
+  <!--
+  <div class="container-fluid h-100">
+    <div class="row h-100">
+      <div class="col-6">
+        <div></div>
       </div>
-      <div class="col-6 align-self-center">
-        <div class="row justify-content-center">
-          <iframe width="560" height="315" src="https://www.youtube.com/embed/lfDinSTMHCI?modestbranding=1&autoplay=1&controls=0&fs=0&loop=1&rel=0&showinfo=0" frameborder="0" allow="autoplay; encrypted-media" allowfullscreen></iframe>
-          <img src="img/OLDTV.png" style="width:70%;height:70%;z-index: 100;"/>
-        </div>
+      <div class="col-6">
+        <div></div>
       </div>
     </div>
   </div>
 -->
-
-<video autoplay muted loop id="myVideo" src="img/vid.mov"></video>
+  <img id="main-icon" src="img/GREASE.png" />
+  <div class="container-fluid h-100">
+    <div class="row h-100 justify-content-center">
+      <div class="col-6 align-self-center">
+        <div class="row justify-content-center">
+          <div id="block"></div>   
+        </div>
+      </div>
+      <div class="col-6 align-self-center">
+        <div class="row justify-content-center">
+          <div id="block2"></div>
+        </div>
+      </div>
+    </div>
+  </div>
 
   <!--Javascript-->
   <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
