cleaned up files

--- a/index.html
+++ b/index.html
@@ -11,19 +11,8 @@
 </head>
 <body>
   <video autoplay muted loop id="mainVideo" src="img/vid.mov"></video>
-  <!--
-  <div class="container-fluid h-100">
-    <div class="row h-100">
-      <div class="col-6">
-        <div></div>
-      </div>
-      <div class="col-6">
-        <div></div>
-      </div>
-    </div>
-  </div>
--->
-  <img id="main-icon" src="img/GREASE.png" />
+  <img id="main-icon" src="img/grease.png" />
+
   <div class="container-fluid h-100">
     <div class="row h-100 justify-content-center">
       <div class="col-6 align-self-center">
