--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <video autoplay muted loop id="mainVideo" src="img/vid.mov"></video>
-  <img id="main-icon" src="img/grease.png" />
+  <img id="main-icon" src="img/grease-icon.png" />
 
   <div class="container-fluid h-100">
     <div class="row h-100 justify-content-center">
