--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     <div class="row h-100 justify-content-center">
       <div class="col-6 align-self-center">
         <div class="row justify-content-center">
-          <div id="block"></div>   
+          <div id="block">
+		  </div>   
         </div>
       </div>
       <div class="col-6 align-self-center">
