made video playable on mobile

--- a/index.html
+++ b/index.html
@@ -10,7 +10,13 @@
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
 <body>
-  <video autoplay muted loop id="mainVideo" src="img/vid.mov"></video>
+  <!--<video autoplay muted loop id="mainVideo" src="img/vid.mov"></video>-->
+
+  <video muted="" autoplay="" poster="img/placeholder.png" id="mainVideo">
+      <source src="img/vid.webm" type="”video/webm”">
+      <source src="img/vid.mp4" type="video/mp4">
+  </video>
+
   <a href=""><img id="main-icon" src="img/grease-icon.png" /></a>
 
   <div class="container-fluid h-100">
