updated so mobile shows click areas and can zoom

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
   </video>
 
   <a href=""><img id="main-icon" src="img/grease-icon.png" /></a>
+  <div id="overlay"></div>
 
   <div class="container-fluid h-100">
     <div class="row h-100 justify-content-center">
