--- a/index.html
+++ b/index.html
@@ -16,8 +16,13 @@
       <source src="img/vid.webm" type="”video/webm”">
       <source src="img/vid.mp4" type="video/mp4">
   </video>
-
-  <a href=""><img id="main-icon" src="img/grease-icon.png" /></a>
+  
+  <div>
+    <div id="content">
+      <a href=""><img id="main-icon" src="img/grease-icon.png" /></a>
+    </div>
+  </div>
+  
   <div id="overlay"></div>
 
   <div class="container-fluid h-100">
