--- a/shop/index.html
+++ b/shop/index.html
@@ -24,16 +24,16 @@
               </div>
             </div>
             <div class="row">
-              <div class="col-5" style="margin-top:-3em;">
-                <p class="shop-text" style="font-size:2em;margin-bottom: 0.1em;"> JUST </p>
-                <p class="shop-text" style="font-size:5em;">$24.99</p>
-                <p class="shop-text" style="font-size:1em; margin-top: -1.2em;">PLUS SHIPPING AND HANDLING</p>
+              <div class="col-5" id="second-row">
+                <p class="shop-text" id="txt1" style="margin-bottom: 0.1em;"> JUST </p>
+                <p class="shop-text" id="txt2">$24.99</p>
+                <p class="shop-text" id="txt3" style="margin-top: -1.2em;">PLUS SHIPPING AND HANDLING</p>
               </div>
               <div class="col-7">
                 <img id="payments" src="../img/payment-options.png"/>
               </div>
             </div>
-            <div class="row" style="margin-top:5.5em; margin-bottom: 1em">
+            <div class="row" id="third-row" style="margin-bottom: 1em">
               <div class="col-12">
                 <div id='product-component-a89fcfb0e82'></div>
                 <script type="text/javascript">
