--- a/shop/index.html
+++ b/shop/index.html
@@ -9,7 +9,7 @@
   <link rel="icon" href="" type="image/x-icon">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
-<body style="background-color: #383ee6 !important">
+<body style="background: linear-gradient(to bottom right, #3036bd, #383ee6, #3036bd)">
   <div class="container-fluid h-100" id="shop-outer">
     <div class="row h-100 justify-content-center">
       <div class="col-12 align-self-center">
@@ -92,7 +92,7 @@
                                           "background-color": "transparent",
                                           "outline": "0 !important"
                                         },
-                                        "padding": "7px 18px", //"6px 50px",              
+                                        "padding": "7.5px 18px", //"6px 50px",              
                                     },
                                     "options":{
                                        "display": "block !important",
