--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="row h-100 justify-content-center">
       <div class="col-6 align-self-center">
         <div class="row justify-content-center">
-          <a href="shop/index.html" id="block"></a> 
+          <a href="/shop/" id="block"></a> 
         </div>
       </div>
       <div class="col-6 align-self-center">
