--- a/shop/index.html
+++ b/shop/index.html
@@ -17,7 +17,7 @@
           <div class="container" id="shop-inner" style="transform: scale(0.85);">
             <div class="row">
               <div class="col-6">
-                <a href="../index.html"><img id="shop-icon" src="../img/grease-icon.png"/></a>
+                <a href="/"><img id="shop-icon" src="../img/grease-icon.png"/></a>
               </div>
               <div class="col-6">
                 <img id="shirt-img" src="../img/shirt-transparent.png"/>
