put shop inside tv

--- a/shop/index.html
+++ b/shop/index.html
@@ -9,13 +9,12 @@
   <link rel="icon" href="../img/flower.ico" type="image/x-icon">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/css/bootstrap.min.css" integrity="sha384-PsH8R72JQ3SOdhVi3uxftmaW6Vc51MKb0q5P2rRUpPvrszuE4W1povHYgTpBfshb" crossorigin="anonymous">
 </head>
-<body style="background: linear-gradient(to bottom right, #3036bd, #383ee6, #3036bd)">
-  <img src="../img/tv-overlay.png" style="position: fixed;right: 0;bottom: 0;min-width: 100%; min-height: 100%;opacity: 0.016;"/>
+<body style="background-color: #000">
   <div class="container-fluid h-100" id="shop-outer">
     <div class="row h-100 justify-content-center">
       <div class="col-12 align-self-center">
         <div class="row justify-content-center">
-          <div class="container" id="shop-inner" style="transform: scale(0.85);">
+          <div class="container" id="shop-inner" style="transform: scale(0.55);margin-top:-8%;">
             <div class="row">
               <div class="col-6">
                 <a href="../index.html"><img id="shop-icon" src="../img/grease-icon.png"/></a>
