--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 <body>
   <!--<video autoplay muted loop id="mainVideo" src="img/vid.mov"></video>-->
 
-  <video muted="" autoplay="" loop="" playsinline="" poster="img/placeholder.png" id="mainVideo">
+  <video muted autoplay loop playsinline poster="img/placeholder.png" id="mainVideo">
       <source src="img/vid.webm" type="”video/webm”">
       <source src="img/vid.mp4" type="video/mp4">
   </video>
