--- a/shop/index.html
+++ b/shop/index.html
@@ -35,7 +35,7 @@
             </div>
             <div class="row" id="third-row" style="margin-bottom: 1em">
               <div class="col-12">
-                <div id='product-component-a89fcfb0e82'></div>
+                <div id='product-component-949f5b273d9'></div>
                 <script type="text/javascript">
                   /*<![CDATA[*/
                   (function () {
@@ -60,15 +60,15 @@
 
                     function ShopifyBuyInit() {
                       var client = ShopifyBuy.buildClient({
-                        domain: 'roy-blair.myshopify.com',
-                        apiKey: 'c4436ef009919a87987bc103df1e3fa1',
+                        domain: 'greasemerch.myshopify.com',
+                        apiKey: '270d86d30fc3da6e01619d075834f350',
                         appId: '6',
                       });
 
                       ShopifyBuy.UI.onReady(client).then(function (ui) {
                         ui.createComponent('product', {
-                          id: [663087579164],
-                          node: document.getElementById('product-component-a89fcfb0e82'),
+                          id: [564217249849],
+                          node: document.getElementById('product-component-949f5b273d9'),
                           moneyFormat: '%24%7B%7Bamount%7D%7D',
                           options: {
                             "product":{"variantId":"all","width":"240px",
