added grease shirt

--- a/shop/index.html
+++ b/shop/index.html
@@ -20,7 +20,7 @@
                 <a href="../index.html"><img id="shop-icon" src="../img/grease-icon.png"/></a>
               </div>
               <div class="col-6">
-                <img id="shirt-img" src="../img/shirt-transparent.png"/>
+                <img id="shirt-img" src="../img/shirt-grease.png"/>
               </div>
             </div>
             <div class="row">
