--- a/shop/index.html
+++ b/shop/index.html
@@ -14,7 +14,7 @@
     <div class="row h-100 justify-content-center">
       <div class="col-12 align-self-center">
         <div class="row justify-content-center">
-          <div class="container" id="shop-inner" style="transform: scale(0.55);margin-top:-8%;">
+          <div class="container" id="shop-inner" style="margin-top:-8%;">
             <div class="row">
               <div class="col-6">
                 <a href="../index.html"><img id="shop-icon" src="../img/grease-icon.png"/></a>
