--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   
   <div id="overlay"></div>
 
-  <div class="container-fluid h-100">
+  <div class="container-fluid h-100" id="desktop">
     <div class="row h-100 justify-content-center">
       <div class="col-6 align-self-center">
         <div class="row justify-content-center">
@@ -35,6 +35,23 @@
       <div class="col-6 align-self-center">
         <div class="row justify-content-center">
           <a href="https://www.youtube.com/watch?v=lfDinSTMHCI" id="block2"></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <div id="mobile">
+    <div class="container-fluid h-100">
+      <div class="row h-100 justify-content-center">
+        <div class="col-6 align-self-center">
+          <div class="row justify-content-center">
+            <a href="shop/index.html" id="block-m"></a> 
+          </div>
+        </div>
+        <div class="col-6 align-self-center">
+          <div class="row justify-content-center">
+            <a href="https://www.youtube.com/watch?v=lfDinSTMHCI" id="block2-m"></a>
+          </div>
         </div>
       </div>
     </div>
