--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DREW PHILLIPS</title>
+  <title>GREASE</title>
   <meta name="description" content="Everblu Inc">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/home.css">
@@ -29,7 +29,7 @@
     <div class="row h-100 justify-content-center">
       <div class="col-6 align-self-center">
         <div class="row justify-content-center">
-          <a href="shop/index.html" id="block"></a> 
+          <a href="/shop/" id="block"></a> 
         </div>
       </div>
       <div class="col-6 align-self-center">
