--- a/shop/index.html
+++ b/shop/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>DREW PHILLIPS</title>
+  <title>GREASE</title>
   <meta name="description" content="Everblu Inc">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="../css/shop.css">
@@ -17,7 +17,7 @@
           <div class="container" id="shop-inner" style="margin-top:-8%;">
             <div class="row">
               <div class="col-6">
-                <a href="../index.html"><img id="shop-icon" src="../img/grease-icon.png"/></a>
+                <a href="/"><img id="shop-icon" src="../img/grease-icon.png"/></a>
               </div>
               <div class="col-6">
                 <img id="shirt-img" src="../img/shirt-grease.png"/>
