--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
       </div>
       <div class="col-6 align-self-center">
         <div class="row justify-content-center">
-          <a href="https://www.youtube.com/watch?v=lfDinSTMHCI" id="block2"></a>
+          <a href="https://www.youtube.com/watch?v=_yI_TW6FsTY&feature=youtu.be" id="block2"></a>
         </div>
       </div>
     </div>
@@ -50,7 +50,7 @@
         </div>
         <div class="col-6 align-self-center">
           <div class="row justify-content-center">
-            <a href="https://www.youtube.com/watch?v=lfDinSTMHCI" id="block2-m"></a>
+            <a href="https://www.youtube.com/watch?v=_yI_TW6FsTY&feature=youtu.be" id="block2-m"></a>
           </div>
         </div>
       </div>
