updated text on homepage

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -376,18 +376,10 @@ Click to<a href="https://www.timetrade.com/book/D5ZPP"> Discuss Hiring Needs</a>
 	</div><!-- #secondary -->
                 </div>
 			</div>
-			<div class="site-info">
-                <div class="copyright">
-                	Copyright &copy;  BURKS SEARCH-SANFORD ROSE ASSOCIATES &reg; NETWORK                </div>            
-            	<div class="credit-info">
-					
-						
-                    Developed by 
-                    <a href="http://www.cincywebdesigners.com">
-                   		Distinctive Graphics and Web Design, LLC.                    </a>
-                </div>
-
-			</div><!-- .site-info -->
+  <div class="site-info">
+    <div class="copyright">
+    Copyright &copy; Pathway Biotechnology</div>            
+  </div>
 		</footer><!-- #colophon -->
 	</div><!-- #page -->
 
