--- a/index.html
+++ b/index.html
@@ -242,10 +242,8 @@ body {font-family: "Open Sans", Helvetica, sans-serif; font-size: 14pxpx; line-h
               <li><strong>Nothing&#8217;s Working or No Time?</strong></li>
             </ul>
             <p><strong> We’re here to help you get what you want from your business. Do you want to grow faster? To become more profitable? Build a legacy? Enjoy your life more? Your business vision is the goal. Our goal is to help you get it.</strong></p>
-            <p>Corporate Summary</p>
-            <p>The Sanford Rose Associates Executive Recruiter Search System, founded in 1959, is a full-service executive recruitment organization that conducts retained searches through an international network of 70+ offices that were named by Hunt Scanlon to the Top 10 U.S./AMERICAS Retained Search Firm list for 2017.   We are committed to providing retained recruiting services of the highest quality, we adhere to the highest ethical standards with maximum integrity, objectivity and confidentiality.</p>
-            <p>Burks Search -Sanford Rose Associates -Crystal Lake devotes its practice to serving professionals primarily in privately held businesses that are in the $10MM to $300MM in sales range.  The entrepreneurs who lead these businesses have unique situations that require individuals who can contribute to their organizations in many ways. We are committed to providing our exclusive clients with candidates who will “make a difference” in their growing businesses.</p>
-            <p>Our passion here at Burks Search is to place successful people into jobs they love. We want to <a href="https://www.timetrade.com/book/D5ZPP" target="_blank" rel="noopener">discuss your hiring business vision</a>. Visit our <a href="contact-us/index.html">contact</a> page to reach us.</p>
+            <h3>Corporate Summary</h3>
+            <p>Our firm offers a full suite of pre-patent life science technology evaluation, including technology validation, market analysis, comps, and post-IP protection marketing plans. Our clients include the pharmaceutical and biotechnology industries, IP firms, angel and venture capital investors, and universities. Our experience in faculty, pharmaceutical, biotechnology, contract research, business development and technology transfer positions gives us unique experience, creativity and credibility. Let us help you maximize the potential of intellectual property, whether internal or external.</p>
             <table class="tg" style="height: 418px;" width="750">
               <tbody>
                 <tr>
