--- a/index.html
+++ b/index.html
@@ -94,19 +94,19 @@
             <div class="nav-container">
               <ul id="menu-top-menu" class="nav-menu">
                 <li id="menu-item-465" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-465">
-                  <a href="about/index.html"><div>Welcome</div></a>
+                  <a href="welcome/index.html"><div>Welcome</div></a>
                 </li>
                 <li id="menu-item-466" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-466">
-                  <a href="services/index.html"><div>What We Do</div></a>
+                  <a href="what-we-do/index.html"><div>What We Do</div></a>
                 </li>
                 <li id="menu-item-468" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468">
-                  <a href="capabilities/index.html"><div>Who We Are</div></a>
+                  <a href="who-we-are/index.html"><div>Who We Are</div></a>
                 </li>
                 <li id="menu-item-467" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467">
-                  <a href="contact-us/index.html"><div>Why Work With Us</div></a>
+                  <a href="why-work-with-us/index.html"><div>Why Work With Us</div></a>
                 </li>
                 <li id="menu-item-467" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467">
-                  <a href="contact-us/index.html"><div>Our Process</div></a>
+                  <a href="our-process/index.html"><div>Our Process</div></a>
                 </li>
                 <li id="menu-item-467" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467">
                   <a href="contact-us/index.html"><div>Contact Us</div></a>
@@ -128,12 +128,12 @@
         <div class="tx-slider-box">
           <div class="tx-slider-img">
             <a href="img/dna-1024x683.jpg" class="tx-colorbox">
-              <img src="img/dna-1200x420.jpg" alt="" class="blog-image" />
+              <img src="img/dna-1200x360.jpg" alt="" class="blog-image" />
             </a>
           </div>
           <div class="tx-slide-content">
             <div class="tx-slide-content-inner" style="text-align:left;">
-              <h3 class="tx-slide-title" style="font-size: 33px;text-transform: uppercase;opacity:0.85" >Your Project Is Our Passion</h3>
+              <h3 class="tx-slide-title" style="font-size: 33px;text-transform: uppercase;opacity:0.95" >Your Project Is Our Passion</h3>
             </div>
           </div>
         </div>
@@ -263,10 +263,10 @@
                 <a href="index.html">Home</a>
               </li>
               <li id="menu-item-124" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-124">
-                <a href="about/index.html">Welcome</a>
+                <a href="welcome/index.html">Welcome</a>
               </li>
               <li id="menu-item-58" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-58">
-                <a href="services/index.html">What We Do</a>
+                <a href="what-we-do/index.html">What We Do</a>
               </li>
             </ul>
           </div>    
@@ -275,13 +275,13 @@
           <div class="menu-main-menu-container">
             <ul id="menu-main-menu" class="menu">
               <li id="menu-item-302" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-302">
-                <a href="capabilities/index.html">Who We Are</a>
+                <a href="who-we-are/index.html">Who We Are</a>
               </li>
               <li id="menu-item-400" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-4 current_page_item menu-item-400">
-                <a href="index.html">Why Work With Us</a>
+                <a href="why-work-with-us/index.html">Why Work With Us</a>
               </li>
               <li id="menu-item-124" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-124">
-                <a href="about/index.html">Our Process</a>
+                <a href="our-process/index.html">Our Process</a>
               </li>
             </ul>
           </div>
@@ -290,7 +290,7 @@
           <div class="menu-main-menu-container">
             <ul id="menu-main-menu" class="menu">
               <li id="menu-item-58" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-58">
-                <a href="services/index.html">Contact Us</a>
+                <a href="contact-us/index.html">Contact Us</a>
               </li>
             </ul>
           </div>
@@ -298,10 +298,13 @@
       </div>
     </aside>
 
-    <aside id="custom_html-4" class="widget_text widget widget_custom_html"><h3 class="widget-title">Contact</h3><div class="textwidget custom-html-widget">
+    <aside id="custom_html-4" class="widget_text widget widget_custom_html">
+      <h3 class="widget-title">Contact</h3>
+      <div class="textwidget custom-html-widget">
      Call us: &nbsp (262) 456-0489 <br>
      Mail us: &nbsp ediehl@pathwaybiotechnology.com
    </div><!-- #secondary -->
+ </aside>
  </div>
 </div>
 <div class="site-info">
@@ -330,9 +333,11 @@
 <div id="wprmenu_menu" class="wprmenu_levels left wprmenu_custom_icons">
   <ul id="wprmenu_menu_ul">
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-4 current_page_item menu-item-469"><a href="index.html">Home</a></li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-465"><a href="about/index.html">Welcome</a></li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-466"><a href="services/index.html">Services</a></li>
-    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="capabilities/index.html">Capabilities</a></li>
+    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-465"><a href="welcome/index.html">Welcome</a></li>
+    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-466"><a href="what-we-do/index.html">What We Do</a></li>
+    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="who-we-are/index.html">Who We Are</a></li>
+    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="why-work-with-us/index.html">Why Work With Us</a></li>
+    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="our-process/index.html">Our Process</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467"><a href="contact-us/index.html">Contact Us</a></li>
   </ul>
 </div>
