remade footer on home page, still more stuff to do for that but it's a lot better

--- a/index.html
+++ b/index.html
@@ -251,62 +251,56 @@
 <footer id="colophon" class="site-footer" role="contentinfo">
  <div class="footer-bg clearfix">
   <div class="widget-wrap">
-   <div id="secondary" class="sidebar-container" role="complementary">
-    <div class="widget-area" id="footer-widgets">
-     <aside id="nav_menu-2" class="widget widget_nav_menu">
-      <h3 class="widget-title">Site Map</h3>
-      <div class="row">
-        <div class="col-4">
-          <div class="menu-main-menu-container">
-            <ul id="menu-main-menu" class="menu">
-              <li id="menu-item-400" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-4 current_page_item menu-item-400">
-                <a href="index.html">Home</a>
-              </li>
-              <li id="menu-item-124" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-124">
-                <a href="welcome/index.html">Welcome</a>
-              </li>
-              <li id="menu-item-58" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-58">
-                <a href="what-we-do/index.html">What We Do</a>
-              </li>
-            </ul>
-          </div>    
-        </div>
-        <div class="col-4">
-          <div class="menu-main-menu-container">
-            <ul id="menu-main-menu" class="menu">
-              <li id="menu-item-302" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-302">
-                <a href="who-we-are/index.html">Who We Are</a>
-              </li>
-              <li id="menu-item-400" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-home current-menu-item page_item page-item-4 current_page_item menu-item-400">
-                <a href="why-work-with-us/index.html">Why Work With Us</a>
-              </li>
-              <li id="menu-item-124" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-124">
-                <a href="our-process/index.html">Our Process</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-        <div class="col-4">
-          <div class="menu-main-menu-container">
-            <ul id="menu-main-menu" class="menu">
-              <li id="menu-item-58" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-58">
-                <a href="contact-us/index.html">Contact Us</a>
-              </li>
-            </ul>
-          </div>
-        </div>
-      </div>
-    </aside>
-
-    <aside id="custom_html-4" class="widget_text widget widget_custom_html">
-      <h3 class="widget-title">Contact</h3>
-      <div class="textwidget custom-html-widget">
-     Call us: &nbsp (262) 456-0489 <br>
-     Mail us: &nbsp ediehl@pathwaybiotechnology.com
-   </div><!-- #secondary -->
- </aside>
- </div>
-</div>
+  <div class="row footer-row">
+		<div class="col-md-6">
+			<h3 class="widget-title">Site Map</h3>
+			<div class="row">
+				<div class="col-4 footer-nav">
+				  <div class="menu-main-menu-container">
+					<a href="index.html">Home</a>
+				  </div>    
+				</div>
+				<div class="col-4 footer-nav">
+				  <div class="menu-main-menu-container">
+					<a href="who-we-are/index.html">Who We Are</a>
+				  </div>    
+				</div>
+				<div class="col-4 footer-nav">
+				  <div class="menu-main-menu-container">
+					<a href="contact-us/index.html">Contact Us</a>
+				  </div>    
+				</div>
+				<div class="col-4 footer-nav">
+				  <div class="menu-main-menu-container">
+					<a href="welcome/index.html">Welcome</a>
+				  </div>    
+				</div>
+				<div class="col-4 footer-nav">
+				  <div class="menu-main-menu-container">
+					<a href="why-work-with-us/index.html">Why Work With Us</a>
+				  </div>    
+				</div>
+				<div class="col-4">
+  
+				</div>
+				<div class="col-4 footer-nav">
+				  <div class="menu-main-menu-container">
+					<a href="what-we-do/index.html">What We Do</a>
+				  </div>    
+				</div>
+				<div class="col-4 footer-nav">
+				  <div class="menu-main-menu-container">
+					<a href="our-process/index.html">Our Process</a>
+				  </div>    
+				</div>
+			</div>
+		</div>
+		<div class="col-md-6">
+			<h3 class="widget-title">Contact</h3>
+			<div class="footer-text">Call us:   (262) 456-0489 </div>
+			<div class="footer-text">Mail us:   ediehl@pathwaybiotechnology.com</div>
+		</div>
+	</div>
 <div class="site-info">
   <div class="copyright">
   Copyright &copy; Pathway Biotechnology</div>            
