text edit updates

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
         <div class="container">
           <div class="row">
             <div class="col-12">
-              <h2 class="section-title">We Are Your Pre-Commercialized Experts</h2>
+              <h2 class="section-title">We Are Your Pre-Commercialization Experts</h2>
             </div>
             <div class="col-md-4">
               <div class="text-icon wow animated" style="visibility: visible;padding-bottom: 20px;">
@@ -229,11 +229,8 @@
             </div>
           </div>
         </div>
-        <br>
-        <br>
-        <hr>
-        <br>
-        <br>
+
+
         <!-- TESTIMONIALS -->
 
 
