--- a/what-we-do/index.html
+++ b/what-we-do/index.html
@@ -127,10 +127,11 @@
                <div id="content" class="site-content" role="main">
                 <div class="row">
                   <div class="col-12">
-                    <p style="font-size: 1.1rem;font-weight: 700;color:#333">Are you at a university and need to evaluate all of the potential IP in a disclosure and make a patent decision?</p>
-                    <p style="font-size: 1.1rem;padding-top: 1rem;font-weight: 700;color:#333">Are you in industry or an investor evaluating the science, value, comps, and market potential for intellectual property?</p>
-                    <p style="font-size: 1.1rem;padding-top: 1rem;padding-bottom:1rem;font-weight: 700;color:#333">Are you at a law firm that requires expert advice for clients?</p>
-                    <p style="font-size:1.1rem;padding-top:1rem;">Our firm offers a full suite of pre-patent life science technology evaluation, including technology validation, market analysis, comps, and post-patent marketing plans. Our clients include the pharmaceutical and biotechnology industries, IP firms, angel and venture capital investors, and universities. Our experience in faculty, pharmaceutical, biotechnology, contract research, business development and technology transfer positions gives us unique experience, creativity and credibility. Let us help you maximize the potential of intellectual property, whether it was developed in-house or externally.</p>
+                    <p style="font-size: 1.1rem;font-weight: 700;color:#333">Are you at a university and need to identify and evaluate all of the potential IP in a disclosure and make a patent decision?</p>
+                    <p style="font-size: 1.1rem;padding-top: 1rem;font-weight: 700;color:#333">Are you an IP attorney, industry representative or investor, evaluating the science, value, comps, and market potential for intellectual property?</p>
+                    <p style="font-size: 1.1rem;padding-top: 1rem;font-weight: 700;color:#333">Do you need technology scouting?</p>
+                    <p style="font-size: 1.1rem;padding-top: 1rem;padding-bottom:1rem;font-weight: 700;color:#333">Do you need a complete marketing plan, target identification and ongoing outreach?</p>            
+                    <p style="font-size:1.1rem;padding-top:1rem;">Our firm offers a full suite of pre-patent life science technology evaluation, including technology validation, market analysis, comps, and post-patent marketing plans. Our clients include the pharmaceutical and biotechnology industries, IP firms, angel and venture capital investors, and universities. Our experience in faculty, pharmaceutical, biotechnology, contract research, business development and technology transfer positions gives us unique skills, creativity and credibility. Let us help you maximize the potential of intellectual property, whether it was developed in-house or externally.</p>
                   </div>
                 </div>
                </div>
