new home slider

--- a/index.html
+++ b/index.html
@@ -132,6 +132,33 @@
             </a>
           </div>
           <div class="tx-slide-content">
+            <div class="tx-slide-content-inner" style="text-align:left;height:100%;">
+  <div id="textSlider" class="row">
+          <div class="col-xs-12 col-sm-12 col-md-3 col-lg-4 iamCol">
+            <p style="margin-bottom: 0.1em">Your Project</p>
+            <p>Is Our Passion</p>
+          </div>
+          <div class="col-xs-12 col-sm-12 col-md-7 col-lg-8 slideCol">
+            <div class="scroller">
+              <div class="inner">
+                <div class="testimonial">
+                  <p style="text-transform: none;"><span class="quotemark-left">"</span>I was literally BLOWN AWAY by Company A's work! They went above and beyond all of our expectations with design, usability. and branding, I will reccommend them to everyone I know!<span class="quotemark-right">"</span></p>
+                  <p class="quoteBy">John Doe // Local Business Owner</p>
+                </div>
+                <div class="testimonial">
+                  <p style="text-transform: none;"><span class="quotemark-left">"</span>I could not stop staring! Company A's Web Solutions are by far the most elegant solutions, you can't beat their quality and attention to detail!<span class="quotemark-right">"</span></p>
+                  <p class="quoteBy">Andy Fakename // CEO: Andy's Camping Supplies</p>
+                </div>
+                <div class="testimonial">
+                  <p style="text-transform: none;"><span class="quotemark-left">"</span>Carl Fakeguy, was the most helpful designer I've ever hired. He listened to my ideas and advised against things that could negatively affect my CEO. Company A is by far the most generous and helpful company, 5/5!<span class="quotemark-right">"</span></p>
+                  <p class="quoteBy">Janice Falsename</p>
+                </div>                                
+              </div>
+            </div>
+          </div>
+          </div>
+        </div>
+<!--
             <div class="tx-slide-content-inner" style="text-align:left;">
               <h3 class="tx-slide-title" style="font-size: 33px;text-transform: uppercase;opacity:0.95" >Your Project Is Our Passion</h3>
             
@@ -178,6 +205,7 @@
 					  </div>
 					</div>
 			</div>
+    -->
           </div>
         </div>
       </div>
@@ -243,67 +271,71 @@
     </div><!-- #comments -->			
   </div><!-- #content -->
 </div><!-- #primary -->
-
-
 </div><!-- #main -->
+
+
+
 <footer id="colophon" class="site-footer" role="contentinfo">
  <div class="footer-bg clearfix">
   <div class="widget-wrap">
-  <div class="row footer-row">
-		<div class="col-md-6">
-			<h3 class="widget-title">Site Map</h3>
-			<div class="row">
-				<div class="col-4 footer-nav">
-				  <div class="menu-main-menu-container">
-					<a href="index.html">Home</a>
-				  </div>    
-				</div>
-				<div class="col-4 footer-nav">
-				  <div class="menu-main-menu-container">
-					<a href="who-we-are/index.html">Who We Are</a>
-				  </div>    
-				</div>
-				<div class="col-4 footer-nav">
-				  <div class="menu-main-menu-container">
-					<a href="contact-us/index.html">Contact Us</a>
-				  </div>    
-				</div>
-				<div class="col-4 footer-nav">
-				  <div class="menu-main-menu-container">
-					<a href="welcome/index.html">Welcome</a>
-				  </div>    
-				</div>
-				<div class="col-4 footer-nav">
-				  <div class="menu-main-menu-container">
-					<a href="why-work-with-us/index.html">Why Work With Us</a>
-				  </div>    
-				</div>
-				<div class="col-4">
-  
-				</div>
-				<div class="col-4 footer-nav">
-				  <div class="menu-main-menu-container">
-					<a href="what-we-do/index.html">What We Do</a>
-				  </div>    
-				</div>
-				<div class="col-4 footer-nav">
-				  <div class="menu-main-menu-container">
-					<a href="our-process/index.html">Our Process</a>
-				  </div>    
-				</div>
-			</div>
-		</div>
-		<div class="col-md-6">
-			<h3 class="widget-title">Contact</h3>
-			<div class="footer-text">Call us:   (262) 456-0489 </div>
-			<div class="footer-text">Mail us:   ediehl@pathwaybiotechnology.com</div>
-		</div>
-	</div>
-<div class="site-info">
-  <div class="copyright">
-  Copyright &copy; Pathway Biotechnology</div>            
-</div>
+    <div class="row footer-row">
+            <div class="col-md-6">
+             <h3 class="widget-title">Site Map</h3>
+             <div class="row">
+              <div class="col-4 footer-nav">
+                <div class="menu-main-menu-container">
+                 <a href="index.html">Home</a>
+               </div>    
+              </div>
+             <div class="col-4 footer-nav">
+              <div class="menu-main-menu-container">
+               <a href="who-we-are/index.html">Who We Are</a>
+             </div>    
+           </div>
+           <div class="col-4 footer-nav">
+            <div class="menu-main-menu-container">
+             <a href="contact-us/index.html">Contact Us</a>
+           </div>    
+         </div>
+         <div class="col-4 footer-nav">
+          <div class="menu-main-menu-container">
+           <a href="welcome/index.html">Welcome</a>
+         </div>    
+          </div>
+            <div class="col-4 footer-nav">
+              <div class="menu-main-menu-container">
+               <a href="why-work-with-us/index.html">Why Work With Us</a>
+              </div>    
+            </div>
+            <div class="col-4"></div>
+            <div class="col-4 footer-nav">
+              <div class="menu-main-menu-container">
+               <a href="what-we-do/index.html">What We Do</a>
+              </div>    
+            </div>
+            <div class="col-4 footer-nav">
+              <div class="menu-main-menu-container">
+               <a href="our-process/index.html">Our Process</a>
+              </div>    
+            </div>
+          </div>
+        </div>
+        <div class="col-md-6">
+          <h3 class="widget-title">Contact</h3>
+          <div class="footer-text">Call us:   (262) 456-0489 </div>
+          <div class="footer-text">Mail us:   ediehl@pathwaybiotechnology.com</div>
+          <br/>
+          <br/>
+          <div class="footer-text" style="font-size: 12px !important;">We accept major credit cards, Pay Pal, and U.S. money orders</div>
+        </div>
+      </div>
+      <div class="site-info">
+        <div class="copyright">Copyright &copy; Pathway Biotechnology</div>            
+      </div>
+    </div>
+  </div>
 </footer>
+
 </div><!-- #page -->
 
 <div style="display:none">
