--- a/index.html
+++ b/index.html
@@ -109,6 +109,9 @@
                   <a href="our-process/index.html"><div>Our Process</div></a>
                 </li>
                 <li id="menu-item-467" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467">
+                  <a href="deliverables/index.html"><div>Deliverables</div></a>
+                </li>
+                <li id="menu-item-467" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467">
                   <a href="contact-us/index.html"><div>Contact Us</div></a>
                 </li>
               </ul>
@@ -135,8 +138,8 @@
             <div class="tx-slide-content-inner" style="text-align:left;height:100%;">
   <div id="textSlider" class="row">
           <div class="col-xs-12 col-sm-12 col-md-3 col-lg-4 iamCol">
-            <p style="margin-bottom: 0.1em">Your Project</p>
-            <p>Is Our Passion</p>
+            <p style="margin-bottom: 0.1em">Your Project Is</p>
+            <p>Our Passion</p>
           </div>
           <div class="col-xs-12 col-sm-12 col-md-7 col-lg-8 slideCol">
             <div class="scroller">
@@ -292,11 +295,11 @@
                <a href="who-we-are/index.html">Who We Are</a>
              </div>    
            </div>
-           <div class="col-4 footer-nav">
-            <div class="menu-main-menu-container">
-             <a href="contact-us/index.html">Contact Us</a>
-           </div>    
-         </div>
+            <div class="col-4 footer-nav">
+              <div class="menu-main-menu-container">
+               <a href="deliverables/index.html">Deliverables</a>
+              </div>    
+            </div>
          <div class="col-4 footer-nav">
           <div class="menu-main-menu-container">
            <a href="welcome/index.html">Welcome</a>
@@ -307,7 +310,11 @@
                <a href="why-work-with-us/index.html">Why Work With Us</a>
               </div>    
             </div>
-            <div class="col-4"></div>
+            <div class="col-4 footer-nav">
+            <div class="menu-main-menu-container">
+             <a href="contact-us/index.html">Contact Us</a>
+           </div>    
+         </div>
             <div class="col-4 footer-nav">
               <div class="menu-main-menu-container">
                <a href="what-we-do/index.html">What We Do</a>
@@ -318,6 +325,7 @@
                <a href="our-process/index.html">Our Process</a>
               </div>    
             </div>
+
           </div>
         </div>
         <div class="col-md-6">
@@ -362,6 +370,7 @@
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="who-we-are/index.html">Who We Are</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="why-work-with-us/index.html">Why Work With Us</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="our-process/index.html">Our Process</a></li>
+    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="deliverables/index.html">Deliverables</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467"><a href="contact-us/index.html">Contact Us</a></li>
   </ul>
 </div>
