--- a/who-we-are/index.html
+++ b/who-we-are/index.html
@@ -102,6 +102,9 @@
                             <a href="../our-process/index.html"><div>Our Process</div></a>
                           </li>
                           <li id="menu-item-467" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467">
+                            <a href="../deliverables/index.html"><div>Deliverables</div></a>
+                          </li>
+                          <li id="menu-item-467" class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467">
                             <a href="../contact-us/index.html"><div>Contact Us</div></a>
                           </li>
                         </ul>
@@ -177,11 +180,11 @@
                <a href="index.html">Who We Are</a>
              </div>    
            </div>
-           <div class="col-4 footer-nav">
-            <div class="menu-main-menu-container">
-             <a href="../contact-us/index.html">Contact Us</a>
-           </div>    
-         </div>
+            <div class="col-4 footer-nav">
+              <div class="menu-main-menu-container">
+               <a href="../deliverables/index.html">Deliverables</a>
+              </div>    
+            </div>
          <div class="col-4 footer-nav">
           <div class="menu-main-menu-container">
            <a href="../welcome/index.html">Welcome</a>
@@ -192,7 +195,11 @@
                <a href="../why-work-with-us/index.html">Why Work With Us</a>
               </div>    
             </div>
-            <div class="col-4"></div>
+           <div class="col-4 footer-nav">
+            <div class="menu-main-menu-container">
+             <a href="../contact-us/index.html">Contact Us</a>
+           </div>    
+         </div>
             <div class="col-4 footer-nav">
               <div class="menu-main-menu-container">
                <a href="../what-we-do/index.html">What We Do</a>
@@ -245,6 +252,7 @@
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="index.html">Who We Are</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../why-work-with-us/index.html">Why Work With Us</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../our-process/index.html">Our Process</a></li>
+    <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-468"><a href="../deliverables/index.html">Deliverables</a></li>
     <li class="menu-item menu-item-type-post_type menu-item-object-page menu-item-467"><a href="../contact-us/index.html">Contact Us</a></li>
   </ul>
    </div>
