changes formspree email for testing

--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -132,7 +132,7 @@
           <div class="container" style="margin-bottom:60px;">
             <div class="row">
               <div class="col-lg-6">
-                  <form method="POST" action="https://formspree.io/jakeatude2@gmail.com">
+                  <form method="POST" action="https://formspree.io/vitellofellow@gmail.com">
                     <div class="input string required contact_name field_with_errors">
                       <label class="string required">Name</label>
                       <input class="string required contact" required="required" aria-required="true" aria-invalid="true" placeholder="Full Name" type="text" name="name" value="">
